# pubvec

./: .gitignore  LICENSE  README.md  api.py  main.py  pubmed_fetcher.py  pyproject.toml  requirements.txt  results.json  search_example.py
chroma_db/: chroma.sqlite3
src/pubvec/core/: api.py  vector_store.py
src/pubvec/prompts/: task_description.md
src/pubvec/scripts/: analyze_pubmed_overlap.py  check_all_pubmed_archives.py  check_overlap_with_db.py  download_pubmed.py  fix_broken_downloads.py  import_to_chroma.py  query_db.py  search_example.py  token_counter.py
src/pubvec/utils/: cli.py  logging_utils.py  test_cli.py
src/pubvec/web/: __init__.py  __main__.py  app.py
src/pubvec/web/templates/: index.html
