[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubvec"
version = "0.1.0"
description = "PubMed vector store and processing tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "PubVec Team", email = "" }
]

dependencies = [
    "biopython==1.83",
    "chromadb",
    "sentence-transformers==2.5.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "tqdm==4.66.2",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
]

[project.urls]
Repository = ""

[tool.hatch.build.targets.wheel]
packages = ["src/pubvec"]

[tool.hatch.metadata]
allow-direct-references = true 